Fix text alignment issue on buttons for Google Chrome

--- a/css/authentication.css
+++ b/css/authentication.css
@@ -136,6 +136,7 @@
     color: white;
     border-radius: 10px;
     transition: all .2s;
+    justify-content: center;
 }
 
 #login_button:hover {
@@ -235,6 +236,7 @@
     color: white;
     border-radius: 10px;
     transition: all .2s;
+    justify-content: center;
 }
 
 #signup_button:hover {
